welcome.lessons.welcome.traversal.column.TraversalByColumn.scala.error
ColumnByColumn:3: error: not found: value dir
		dir=getDirection()
                ^ColumnByColumn:4: error: not found: value Direction
		setDirection(Direction.EAST)
                             ^ColumnByColumn:6: error: not found: value Direction
			setDirection(Direction.NORTH)
                                     ^ColumnByColumn:11: error: not found: value dir
		setDirection(dir)
                             ^