welcome.lessons.welcome.traversal.column.TraversalByColumn.scala.code
override def run() {
	def positionFinale():Boolean = {
		dir=getDirection()
		setDirection(Direction.EAST)
		if (estFaceMur) {
			setDirection(Direction.NORTH)
			if (estFaceMur) {return true}
			else {return false}
		}
		else {return false}
		setDirection(dir)
		}





	
}
